--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 <body>
     <div class="center">
-        <h1>Are you yearning for more?</h1>
+        <h1>
+            <a href="essenes.html">Show Me The Way</a>
+        </h1>
     </div>
 </body>
 </html>
