Add a bunch of organizational content

--- a/contact.html
+++ b/contact.html
@@ -5,18 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="referrer" content="strict-origin-when-cross-origin">
-    <meta property="og:title" content="Are you yearning for more?">
+    <meta property="og:title" content="TODO">
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
-    <meta property="og:description" content="Are you yearning for more?">
+    <meta property="og:description" content="TODO">
 
-    <title>Are you yearning for more?</title>
+    <title>Contact</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body class="landing">
-    <h1>
-        <a class="enter" href="essenes.html">I Am Yearning</a>
-    </h1>
+<body class="main">
+<img src="img/under_construction.gif">
 </body>
 </html>
