--- a/beliefs.html
+++ b/beliefs.html
@@ -39,6 +39,6 @@
         </tr>
     </table>
     Copyright 2015 Essenes LLC<br>
-    <a href="contact.html">Contact the Webmaster</a>
+    <a href="contact.html" style="color: white;">Contact the Webmaster</a></body>
 </body>
 </html>
