--- a/essenes.html
+++ b/essenes.html
@@ -35,5 +35,5 @@
         </tr>
     </table>
     Copyright 2015 Essenes LLC<br>
-    <a href="contact.html">Contact the Webmaster</a></body>
+    <a href="contact.html" style="color: white;">Contact the Webmaster</a></body>
 </html>
