--- a/history.html
+++ b/history.html
@@ -32,6 +32,6 @@
         </tr>
     </table>
     Copyright 2015 Essenes LLC<br>
-    <a href="contact.html">Contact the Webmaster</a>
+    <a href="contact.html" style="color: white;">Contact the Webmaster</a></body>
 </body>
 </html>
