Play around with styles some more

--- a/beliefs.html
+++ b/beliefs.html
@@ -17,10 +17,10 @@
 <body class="main">
     <table>
         <tr>
-            <td class="nav"><a href="essenes.html">Home</a></td>
-            <td class="nav"><a href="history.html">Our Story</a></td>
-            <td class="nav"><a href="beliefs.html">What We Believe</a></td>
-            <td class="nav"><a href="join.html">Join Us</a></td>
+            <th class="nav"><a href="essenes.html">Home</a></td>
+            <th class="nav"><a href="history.html">Our Story</a></td>
+            <th class="nav"><a href="beliefs.html">What We Believe</a></td>
+            <th class="nav"><a href="join.html">Join Us</a></td>
         </tr>
         <tr>
             <td colspan="4">
@@ -38,7 +38,7 @@
             </td>
         </tr>
     </table>
-    Copyright 2015 Essenes LLC<br>
+    Copyright 2020 Essenes LLC<br>
     <a href="contact.html" style="color: white;">Contact the Webmaster</a></body>
 </body>
 </html>
