--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body class="main">
-<img src="img/under_construction.gif">
+<body>
+<img src="img/under_construction.gif" style="width: 100%;">
 </body>
 </html>
