Fill out missing content and streamline experience

--- a/beliefs.html
+++ b/beliefs.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="referrer" content="strict-origin-when-cross-origin">
-    <meta property="og:title" content="TODO">
+    <meta property="og:title" content="What We Believe">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="">
-    <meta property="og:description" content="TODO">
 
     <title>What We Believe</title>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -24,8 +22,8 @@
         </tr>
         <tr>
             <td colspan="4">
-                <img src="img/belief.jpg" class="photo" style="padding: 8px 20px 0px 0px">
-                <div class="content">
+                <div class="contentwrap">
+                    <img src="img/belief.jpg" class="photowrap">
                     <p>As a faith-based community, many of our practices are rooted in consecrated text. Our Creed provides us with guidance about how to live our lives.</p>
                     <p>We believe in these principles, as laid out in the Creed:</p>
                     <p>Independence<br>
@@ -38,7 +36,6 @@
             </td>
         </tr>
     </table>
-    Copyright 2020 Essenes LLC<br>
-    <a href="contact.html" style="color: white;">Contact the Webmaster</a></body>
+    Copyright 2024 Essenes LLC<br>
 </body>
 </html>
