--- a/contact.html
+++ b/contact.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="referrer" content="strict-origin-when-cross-origin">
-    <meta property="og:title" content="TODO">
+    <meta property="og:title" content="Contact">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="">
-    <meta property="og:description" content="TODO">
 
     <title>Contact</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-<img src="img/under_construction.gif" style="width: 100%;">
+    <div class="content">
+        <p>This website is part of an art project about the power and influence of cults.</p>
+
+        <p>The Essenes are not a real organization, although they are based on many real-world examples. These groups are designed to manipulate vulnerable people into giving up their free will.</p>
+
+        <p>If you or someone you love is under the influence of a cult, there are resources that can help: <a href="https://freedomofmind.com/">freedomofmind.com</a></p>
+    </div>
 </body>
 </html>
