--- a/essenes.html
+++ b/essenes.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="referrer" content="strict-origin-when-cross-origin">
-    <meta property="og:title" content="TODO">
+    <meta property="og:title" content="Welcome">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="">
-    <meta property="og:description" content="TODO">
 
     <title>Welcome</title>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -34,6 +32,6 @@
             </td>
         </tr>
     </table>
-    Copyright 2020 Essenes LLC<br>
-    <a href="contact.html" style="color: white;">Contact the Webmaster</a></body>
+    Copyright 2024 Essenes LLC<br>
+</body>
 </html>
