--- a/history.html
+++ b/history.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="referrer" content="strict-origin-when-cross-origin">
-    <meta property="og:title" content="TODO">
+    <meta property="og:title" content="Our Story">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="">
-    <meta property="og:description" content="TODO">
 
     <title>Our Story</title>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -24,14 +22,19 @@
         </tr>
         <tr>
             <td colspan="4">
-                <div class="content">
-                    <p><b>Our Founder</b></p>
+                <div class="contentwrap">
+                    <img src="img/reading-book.jpg" class="photowrap">
+                    <p><b>Our Leader</b></p>
+                    <p>Sean Magovern knew from a young age that he was destined to help people find their spiritual calling. He began his work as a Christian missionary, traveling the world to spread compassion and help the less fortunate. During his travels, Sean learned much about faith and its power to change lives. Sean collected this wisdom into a journal which eventually became the Creed of Faithful Stewards.</p>
+                    <p>Back in the United States and with the Creed in hand, Sean set out to share what he had learned and help others reach their full potential. While traveling around the country, Sean talked to many people who shared the same values and were searching for anwers. A community started to grow organically around his work. Now, Sean's leadership and wisdom guide us and provide the foundation for our shared success.</p>
                     <p><b>Our Community</b></p>
+                    <p>We operate a small eco-village named Qumran Farm nestled in 100 acres of sustainably-managed forest. We do everything in our daily lives with an eye toward sustainability and community. We grow our own food, sew our own clothes, and produce our own lumber.</p>
+                    <p>All our resources are shared among the members of our tight-knit group. No matter whether they come from wealth or poverty, everyone who joins us is treated equally. Our members have a multitude of different backgrounds, appearances, and orientations; we feel that this diversity is one of our greatest strengths.</p>
+                    <p>Our community has all the facilities we need to live a full and healthy life, including a school, library, blacksmith shop, and bakery. We ensure that our children receive a proper education based on strong values and hands-on learning opportunities not available in a traditional school setting. We also have experts in holistic medicine so that no one has to leave the community to take care of their well-being.</p>
                 </div>
             </td>
         </tr>
     </table>
-    Copyright 2020 Essenes LLC<br>
-    <a href="contact.html" style="color: white;">Contact the Webmaster</a></body>
+    Copyright 2024 Essenes LLC<br>
 </body>
 </html>
