--- a/join.html
+++ b/join.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="referrer" content="strict-origin-when-cross-origin">
-    <meta property="og:title" content="TODO">
+    <meta property="og:title" content="Join Us">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="">
-    <meta property="og:description" content="TODO">
 
     <title>Join Us</title>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -25,18 +23,12 @@
         <tr>
             <td colspan="4">
                 <div class="content">
-                    <p>If our beliefs and way of living speak to you, then there is a place for you in our community.</p>
-
-                    <p>If you live near Willowbrook, come speak with us at the farmers market. We are there every Saturday morning.</p>
-
-                    <p>If you're not local, you can contact us over the World Wide Web: <a href="contact.html">email</a>.</p>
-
+                    <p>To join us, click <a href="contact.html">here</a>.</p>
                     <img src="img/smiling-group.jpg" class="photo">
                 </div>
             </td>
         </tr>
     </table>
-    Copyright 2020 Essenes LLC<br>
-    <a href="contact.html" style="color: white;">Contact the Webmaster</a></body>
+    Copyright 2024 Essenes LLC<br>
 </body>
 </html>
